--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* tailwind initialize start */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* tailwind initialize end */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
